<resources>
    <string name="app_name">InventoryApp</string>
    <string name="action_settings">Settings</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="attach_image">Attach Image</string>
    <string name="choose">CHOOSE</string>
    <string name="add_item">Add Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="unsaved_changes">There are unsaved changes in the product information. Do you want to continue?</string>
    <string name="discard">Discard</string>
    <string name="continue_editing">Continue Editing</string>
    <string name="action_save">Save</string>
    <string name="action_delete_product">Delete this product</string>
    <string name="delete_message">Are you sure you want to delete this data?</string>
    <string name="delete">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sale">Sale</string>
    <string name="empty_list">The stock is empty. Add items using the button below</string>
    <string name="order_more">Order more</string>
    <string name="email">Email</string>
    <string name="order_email">Order more of this item via supplier\'s email</string>
</resources>
